# cc-protocol

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  DEMO.md  DEVELOPMENT.md  DRAFT.md  GEMINI.md  README.md  demo.h  example.cc  generated_protocol_A.h  implementation-notes.md  interface_A.h  interface_A_Subset.h  interface_B.h  interface_C.h  interface_D.h  interface_benchmark.h  interface_constexpr.h  interface_function.h  interface_mutating_function.h  post_instantiation_example.h  protocol.cc  protocol.h  protocol_benchmark.cc  protocol_reflection.h  protocol_test.cc  pyproject.toml  reference_interface.h  reference_interface_protocol.h  tagged_allocator.h  test_concept_errors.cc  tracking_allocator.h
.devcontainer/: devcontainer.json
.github/workflows/: clang-tidy.yml  cmake.yml  code_coverage.yml  copilot-setup-steps.yml  integrity_checks.yml  iwyu.yml  pre-commit.yml  pytest.yml  sanitizers.yml  uv-lock.yml
cmake/: coverage.cmake  sanitizers.cmake  xyz_add_library.cmake  xyz_add_object_library.cmake  xyz_add_test.cmake  xyz_generate_protocol.cmake
cmake/modules/: FindClangTidy.cmake  FindIWYU.cmake
docker/: Dockerfile
experiments/: reflection.cc
presentations/: protocol_2026_05_11.md
scripts/: agentic-sandbox.py  claude-sandbox.py  cmake.py  cmake.sh  docker-shell.sh  gemini-sandbox.py  gemini-sandbox.sh  generate_protocol.py  protocol.j2  protocol_compiler_wrapper.py  protocol_manual_vtable.j2  regenerate_reference_interface_protocol.py  run_concept_errors_test.sh  test_concept_errors.py  test_generate_protocol.py
tutorials/: 1_type_erasure.cc  2_vanishing_this_pointer.cc  3_reflection.cc  README.md  reflection.cc  type_erasure.cc  vanishing_this_pointer.cc
