load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "protocol",
    srcs = ["protocol.cc"],
    hdrs = ["protocol.h"],
    copts = ["-Iexternal/value_types/"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "protocol_test",
    size = "small",
    srcs = ["protocol_test.cc"],
    deps = [
        "protocol",
        "@com_google_googletest//:gtest_main",
    ],
)
