[project]
name = "value-types-dev-tools"
version = "0.1.0"
description = "development support tools for value-types"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pre-commit>=4.2.0",
    "ruff>=0.15.7",
    "xyz-cppmodel",
]

[tool.uv.sources]
xyz-cppmodel = { git = "https://github.com/jbcoe/py_cppmodel.git" }


[tool.ruff]
# See https://docs.astral.sh/ruff/rules/.

[tool.ruff.lint]
ignore = ["B008", "B905", "C901", "E501", "E731"]
select = ["B", "B9", "C", "E", "F", "I", "R", "W"]

[tool.ruff.lint.isort]
force-single-line = true
