[project]
name = "cc-protocol-dev-tools"
version = "0.1.0"
description = "development support tools for value-types"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "clang<19.0.0",
    "cmake-format>=0.6.13",
    "jinja2>=3.1.6",
    "pre-commit>=4.2.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.2",
    "ruff>=0.15.7",
    "xyz-cppmodel",
]

[tool.uv.sources]
xyz-cppmodel = { git = "https://github.com/jbcoe/py_cppmodel.git", rev = "eeb0921173dcde828eeb3940d1fdd4f64eaf7e6d" }


[tool.ruff]
# See https://docs.astral.sh/ruff/rules/.

[tool.ruff.lint]
ignore = ["B008", "B905", "C901", "E501", "E731"]
select = ["B", "B9", "C", "E", "F", "I", "R", "W"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
addopts = ["-p", "scripts.test_concept_errors"]
